--- a/sliderstyle.css
+++ b/sliderstyle.css
@@ -37,7 +37,7 @@ body{
 	width: 200px;
 	height: 200px;
  
-	background: #000000;  
+	background: black;  
 	margin-top:10px;  
 	margin-bottom:10px;  
 	margin-left:5px;  
