--- a/sliderstyle.css
+++ b/sliderstyle.css
@@ -1,8 +1,3 @@
-﻿*{
-	padding: 0;
-	margin: 0;	
-}
-
 body{
 	
 	background:#DDDDDD;
@@ -38,10 +33,7 @@ body{
 	height: 200px;
  
 	background: black;  
-	margin-top:10px;  
-	margin-bottom:10px;  
-	margin-left:5px;  
-	margin-right:5px;
+	margin:10px 10px 5px 5px;  
 }
 
 #carousel ul li img{
